--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -27,7 +27,7 @@
         </ion-item>
         <ion-item>
           <ion-icon slot="start" name="swap"></ion-icon>
-          <ion-label>Historial Ingreso/Egreso</ion-label>
+          <ion-label (click)="planillaIngresoEgreso()">Historial Ingreso/Egreso</ion-label>
         </ion-item>
         <ion-item>
           <ion-icon slot="start" name="clipboard"></ion-icon>
@@ -35,7 +35,7 @@
         </ion-item>
         <ion-item>
           <ion-icon slot="start" name="close"></ion-icon>
-          <ion-label>Cerrar sesion</ion-label>
+          <ion-label (click)="cerrarSesion()">Cerrar sesion</ion-label>
         </ion-item>                  
       </ion-menu-toggle>
     </ion-list>
