--- a/src/app/ingreso/authorization/authorization.page.scss
+++ b/src/app/ingreso/authorization/authorization.page.scss
@@ -11,9 +11,13 @@ ion-footer {
     padding-bottom: 25px;
 }
 
-ion-input {
+h3 {
     text-align: center;
 }
+
+// ion-input {
+//     text-align: center;
+// }
 .select-DNI-size {
     text-align: center;
     width: 2cm;
