--- a/src/app/ingreso/authorization/authorization.page.html
+++ b/src/app/ingreso/authorization/authorization.page.html
@@ -9,26 +9,34 @@
 
 <ion-content class="ion-padding">
 
-    <ion-row>
+    <ion-row style="place-content: center">
         <h3>¿Quien autoriza el ingreso?</h3>
+    </ion-row>
+    <ion-row>
         <ion-list>
             <ion-item>
-                <ion-select class="select-people-size" placeholder="¿Quien autoriza?" okText="Seleccionar" [(ngModel)]="i">
+                <ion-select class="select-people-size" placeholder="¿Quien autoriza?" okText="Seleccionar" [(ngModel)]="nombreAutorizador">
                     <ion-select-option [value]=p.nombre *ngFor="let p of persona; let i = index"> {{p.nombre}}</ion-select-option>
                 </ion-select>
             </ion-item>
         </ion-list>
     </ion-row>
 
+    <ion-row style="place-content: center">
+        <h3>Acompañantes</h3>
+    </ion-row>
     <ion-row>
-        <h3 class="text-center">Acompañantes</h3>
-        <ion-item>
+        <!-- <ion-item>
             <ion-select class="select-DNI-size" placeholder="DNI" value="dni" okText="Seleccionar">DNI
                 <ion-select-option value="DNI">DNI</ion-select-option>
             </ion-select>
             <ion-input type="text" placeholder="Ingrese DNI" [(ngModel)]="dni"></ion-input>
             <ion-icon name="add" color="black"></ion-icon>
-        </ion-item>
+        </ion-item> -->
+        <ion-item>
+            <ion-label position="fixed">Cantidad: </ion-label>
+            <ion-input [value] = cantidad [(ngModel)]="cantidad"></ion-input>
+          </ion-item>
     </ion-row>
 
 
