--- a/src/app/ingreso/newperson/newperson.page.html
+++ b/src/app/ingreso/newperson/newperson.page.html
@@ -10,42 +10,40 @@
 
 
 <ion-content fullscreen>
-    <form onsubmit="processForm(event)">
         <ion-list lines="full" class="ion-no-margin ion-no-padding">
             <ion-item>
                 <ion-label position="stacked">Nombre
                     <ion-text color="danger">*</ion-text>
                 </ion-label>
-                <ion-input required type="text" oninput="handleFirstNameValue(event)"></ion-input>
+                <ion-input required type="text" [(ngModel)]="nombrePersona"></ion-input>
             </ion-item>
 
             <ion-item>
                 <ion-label position="stacked">Apellido
                     <ion-text color="danger">*</ion-text>
                 </ion-label>
-                <ion-input required type="text" oninput="handleLastNameValue(event)"></ion-input>
+                <ion-input required type="text" [(ngModel)]="apellidoPersona"></ion-input>
             </ion-item>
 
             <ion-item>
                 <ion-label position="stacked">Numero de DNI
                     <ion-text color="danger">*</ion-text>
                 </ion-label>
-                <ion-input required type="number" oninput="handleLastNameValue(event)"></ion-input>
+                <ion-input required type="number" [(ngModel)]="dniPersona"></ion-input>
             </ion-item>
 
             <ion-item>
                 <ion-label position="stacked">Numero de teléfono
                     <ion-text color="danger">*</ion-text>
                 </ion-label>
-                <ion-input required type="tel" oninput="handleLastNameValue(event)"></ion-input>
+                <ion-input required type="number" [(ngModel)]="telefonoPersona"></ion-input>
             </ion-item>
 
 
             <div class="ion-padding">
-                <ion-button expand="block" type="submit" class="ion-no-margin">Crear persona</ion-button>
+                <ion-button [disabled]="!(nombrePersona && apellidoPersona && dniPersona && telefonoPersona)" expand="block" type="submit" class="ion-no-margin" (click)="crearPersona()">Crear persona</ion-button>
             </div>
         </ion-list>
-    </form>
 </ion-content>
 
 </html>
