--- a/src/app/ingreso/servicio/servicio.page.html
+++ b/src/app/ingreso/servicio/servicio.page.html
@@ -69,7 +69,7 @@
         <ion-list>
             <ion-item>
                 <ion-select class="select-people-size" placeholder="Seleccione empresa" okText="Seleccionar" [(ngModel)]="empresa">
-                    <ion-select-option [value]=e.nombre *ngFor="let e of empresas; let i = index"> {{e.nombre}}</ion-select-option>
+                    <ion-select-option [value]=e.nombreEmpresa *ngFor="let e of empresas; let i = index"> {{e.nombreEmpresa}}</ion-select-option>
                 </ion-select>
             </ion-item>
         </ion-list>
@@ -78,10 +78,7 @@
         <ion-button routerLink="/newcompany"> Agregar Empresa</ion-button>
     </div>
     <div class="mt-5" style="text-align-last: right">
-        <ion-button routerLink="/transport"> Siguiente</ion-button>
-    </div>
-    <div>
-        <ion-button color="medium" (click)="Imprimir()">Imprimir nombre</ion-button>
+        <ion-button (click)="aceptar()"> Siguiente</ion-button>
     </div>
 
 </ion-content>
