--- a/src/app/ingreso/typeofvisit/typeofvisit.page.html
+++ b/src/app/ingreso/typeofvisit/typeofvisit.page.html
@@ -28,12 +28,12 @@
         </div> -->
         <ion-row class="row h-100 justify-content-center align-items-center">
             <ion-col>
-                <ion-button expand="full" size="large" routerLink="/transport">
+                <ion-button expand="full" size="large" (click)="visita()">
                     <ion-label><i class="fas fa-user-alt"></i>Visita</ion-label>
                 </ion-button>
             </ion-col>
             <ion-col>
-                <ion-button expand="full" size="large" routerLink="/servicio">
+                <ion-button expand="full" size="large" (click)="servicio()">
                     <ion-label><i class="fas fa-tools"></i>Servicio</ion-label>
                 </ion-button>
             </ion-col>
