--- a/src/app/startmenu/startmenu.page.html
+++ b/src/app/startmenu/startmenu.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-toolbar>
+    <ion-toolbar color="primary">
         <ion-title class="ion-class ion-text-capitalize ">IngresAr</ion-title>
         <ion-buttons slot="start">
             <ion-menu-button menu="primerMenu" disable="true"></ion-menu-button>
