--- a/src/app/ingreso/newvehicle/newvehicle.page.html
+++ b/src/app/ingreso/newvehicle/newvehicle.page.html
@@ -54,7 +54,7 @@
             </ion-select>
         </ion-item>
     </ion-row>
-    <ion-row>
+    <!-- <ion-row>
         <ion-item>
             <ion-label position="floating ">Aseguradora</ion-label>
             <ion-input required [(ngModel)]="aseguradora "></ion-input>
@@ -63,7 +63,7 @@
             <ion-label>Vencimiento de seguro</ion-label>
             <ion-datetime [(ngModel)]="vencimiento" placeholder="myDate " [min]="myDate " [max]="max " displayFormat="DD MM YY " placeholder="Select Date "></ion-datetime>
         </ion-item>
-    </ion-row>
+    </ion-row> -->
     <ion-button color="primary " routerLink="/authorization " routerLinkActive="router-link-active ">Aceptar</ion-button>
     <ion-button color="primary " (click)="postVehiculo() ">Crear</ion-button>
 
