--- a/src/app/ingreso/transport/transport.page.html
+++ b/src/app/ingreso/transport/transport.page.html
@@ -23,7 +23,8 @@
   <ion-button size="small" fill="clear" color="dark" strong="true" [routerLink]="['/newvehicle']">Agregar Vehiculo</ion-button>
 </div>
 <div style="text-align-last: right">
-  <ion-button routerLink="/authorization">Aceptar</ion-button>
+  <ion-button (click)="siguiente()">Aceptar</ion-button>
+  <!-- <ion-button (click)="imprimir()">Imprimir</ion-button> -->
 </div>
 
 
