--- a/src/app/security/forgot/forgot.page.html
+++ b/src/app/security/forgot/forgot.page.html
@@ -4,22 +4,21 @@
     </ion-toolbar>
 </ion-header>
 
-<ion-content>
-    <div class="row mt-3">
-        <div class="card text-center" style="width: 18rem;">
-            <div class="card-body">
-                <h4 class="card-title">Olvidaste tu contraseña?</h4>
-                <form>
-                    <div class="form-group mt-4">
-                        <input [(ngModel)]="email" type="email" name="email" class="form-control" aria-describedby="emailHelp" placeholder="Email">
-                    </div>
-                </form>
+<ion-content class="ion-padding">
 
-                <button type="button" class="btn btn-primary btn-lg btn-block" (click)="recover()" [disabled]="!email">Recuperar</button>
+    <div class="card text-center">
+        <div class="card-body">
+            <h4 class="card-title">Olvidaste tu contraseña?</h4>
+            <form>
+                <div class="form-group mt-4">
+                    <input [(ngModel)]="email" type="email" name="email" class="form-control" aria-describedby="emailHelp" placeholder="Email">
+                </div>
+            </form>
 
-                <p class="font-weight-normal mt-2">Ya tenes cuenta?
-                    <b class="bold" routerLink="/login">Ingresa aca</b></p>
-            </div>
+            <button type="button" class="btn btn-primary btn-lg btn-block" (click)="recover()" [disabled]="!email">Recuperar</button>
+
+            <p class="font-weight-normal mt-2">Ya tenes cuenta?
+                <b class="bold" routerLink="/login">Ingresa aca</b></p>
         </div>
     </div>
 
