planilla-ingreso-egreso service changes

--- a/src/app/ingreso/authorization/authorization.page.html
+++ b/src/app/ingreso/authorization/authorization.page.html
@@ -43,7 +43,7 @@
 </ion-content>
 
 <ion-footer no-border>
-    <ion-button (click)="procesarIngresoJson()">
+    <ion-button (click)="global()">
         Procesar Ingreso
     </ion-button>
 </ion-footer>
