--- a/src/app/security/login/login.page.html
+++ b/src/app/security/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-header>
-    <ion-toolbar>
-        <ion-title class="ion-class ion-text-capitalize">IngresAr</ion-title>
+    <ion-toolbar color="primary">
+        <ion-title class="ion-class ion-text-capitalize" style="text-align: center">IngresAr</ion-title>
     </ion-toolbar>
 </ion-header>
 
