--- a/src/app/security/login/login.page.html
+++ b/src/app/security/login/login.page.html
@@ -10,7 +10,7 @@
         <div class="card-body">
             <form>
                 <div class="form-group">
-                    <input [(ngModel)]="user.email" type="email" name="email" class="form-control" aria-describedby="emailHelp" placeholder="Email">
+                    <input [(ngModel)]="user.email" type="email" name="email" class="form-control" aria-describedby="emailHelp" placeholder="Usuario">
                 </div>
 
                 <div class="form-group">
