newvehicle changes and  personasDentroEstablecimiento added

--- a/src/app/funcionesMenu/planilla-ingreso-egreso/planilla-ingreso-egreso.page.html
+++ b/src/app/funcionesMenu/planilla-ingreso-egreso/planilla-ingreso-egreso.page.html
@@ -18,7 +18,7 @@
       </ion-row>
       <ion-row>
         <ion-item *ngFor="let p of planiallaIngresoEgreso">
-          <ion-label> {{p.planillapersona.apellidoPersona}} </ion-label>
+          <ion-label> {{p.planillaPersona.apellidoPersona}} </ion-label>
         </ion-item>
       </ion-row>
     </ion-col>
@@ -31,7 +31,7 @@
       </ion-row>
       <ion-row>
         <ion-item *ngFor="let p of planiallaIngresoEgreso">
-          <ion-label> {{p.planillapersona.nombrePersona}} </ion-label>
+          <ion-label> {{p.planillaPersona.nombrePersona}} </ion-label>
         </ion-item>
       </ion-row>
     </ion-col>
@@ -44,7 +44,7 @@
       </ion-row>
       <ion-row>
         <ion-item *ngFor="let p of planiallaIngresoEgreso">
-          <ion-label> {{p.planillapersona.dniPersona}} </ion-label>
+          <ion-label> {{p.planillaPersona.dniPersona}} </ion-label>
         </ion-item>
       </ion-row>
     </ion-col>
@@ -83,7 +83,7 @@
       </ion-row>
       <ion-row>
         <ion-item *ngFor="let p of planiallaIngresoEgreso">
-          <ion-label> {{p.planillavehiculo.dominio}} </ion-label>
+          <ion-label> {{p.planillaVehiculo.dominio}} </ion-label>
         </ion-item>
       </ion-row>
     </ion-col>
