newcompanion added, reporte planilla canges

--- a/src/app/funcionesMenu/planilla-ingreso-egreso/planilla-ingreso-egreso.page.html
+++ b/src/app/funcionesMenu/planilla-ingreso-egreso/planilla-ingreso-egreso.page.html
@@ -9,85 +9,84 @@
 
 <ion-content>
 
-  <ion-row>
-    <ion-col>
-      <ion-row>
-        <ion-item>
-          <ion-label>Apellido</ion-label>
-        </ion-item>
-      </ion-row>
-      <ion-row>
-        <ion-item *ngFor="let p of planiallaIngresoEgreso">
-          <ion-label> {{p.planillaPersona.apellidoPersona}} </ion-label>
-        </ion-item>
-      </ion-row>
-    </ion-col>
-
-    <ion-col>
-      <ion-row>
-        <ion-item>
-          <ion-label>Nombre</ion-label>
-        </ion-item>
-      </ion-row>
-      <ion-row>
-        <ion-item *ngFor="let p of planiallaIngresoEgreso">
-          <ion-label> {{p.planillaPersona.nombrePersona}} </ion-label>
-        </ion-item>
-      </ion-row>
-    </ion-col>
-  
-    <ion-col>
-      <ion-row>
-        <ion-item>
-          <ion-label>DNI</ion-label>
-        </ion-item>
-      </ion-row>
-      <ion-row>
-        <ion-item *ngFor="let p of planiallaIngresoEgreso">
-          <ion-label> {{p.planillaPersona.dniPersona}} </ion-label>
-        </ion-item>
-      </ion-row>
-    </ion-col>
-  
-    <ion-col>
-      <ion-row>
-        <ion-item>
-          <ion-label>Fecha Ingreso</ion-label>
-        </ion-item>
-      </ion-row>
-      <ion-row>
-        <ion-item *ngFor="let p of planiallaIngresoEgreso">
-          <ion-label> {{p.fechaIngreso}} </ion-label>
-        </ion-item>
-      </ion-row>
-    </ion-col>
-      
-    <ion-col>
-      <ion-row>
-        <ion-item>
-          <ion-label>Fecha Egreso</ion-label>
-        </ion-item>
-      </ion-row>
-      <ion-row>
-        <ion-item *ngFor="let p of planiallaIngresoEgreso">
-          <ion-label>  </ion-label>
-        </ion-item>
-      </ion-row>
-    </ion-col>
-  
-    <ion-col>
-      <ion-row>
-        <ion-item>
-          <ion-label>Dominio</ion-label>
-        </ion-item>
-      </ion-row>
-      <ion-row>
-        <ion-item *ngFor="let p of planiallaIngresoEgreso">
-          <ion-label> {{p.planillaVehiculo.dominio}} </ion-label>
-        </ion-item>
-      </ion-row>
-    </ion-col>
-  </ion-row>
+    <ion-row>
+        <ion-list>
+          <ion-row>
+              <ion-col>
+                  <ion-item>
+                      <ion-label>
+                          Apellido
+                      </ion-label>
+                  </ion-item>
+              </ion-col>
+              <ion-col>
+                  <ion-item>
+                      <ion-label>
+                          Nombre
+                      </ion-label>
+                  </ion-item>
+              </ion-col>
+              <ion-col>
+                  <ion-item>
+                      <ion-label>
+                          DNI
+                      </ion-label>
+                  </ion-item>
+              </ion-col>
+              <ion-col>
+                  <ion-item>
+                      <ion-label>
+                          Marca
+                      </ion-label>
+                  </ion-item>
+              </ion-col>
+              <ion-col>
+                  <ion-item>
+                      <ion-label>
+                          Dominio
+                      </ion-label>
+                  </ion-item>
+              </ion-col>
+          </ion-row>
+          <ion-row *ngFor="let p of planiallaIngresoEgreso">
+              <ion-col>
+                  <ion-item>
+                      <ion-label class="border">
+                          {{p.planillaPersona.apellidoPersona}}
+                      </ion-label>
+                  </ion-item>
+              </ion-col>
+              <ion-col>
+                  <ion-item>
+                      <ion-label>
+                          {{p.planillaPersona.nombrePersona}}
+                      </ion-label>
+                  </ion-item>
+              </ion-col>
+              <ion-col>
+                  <ion-item>
+                      <ion-label>
+                          {{p.planillaPersona.dniPersona}}
+                      </ion-label>
+                  </ion-item>
+              </ion-col>
+              <ion-col>
+                  <ion-item>
+                      <ion-label>
+                          {{p.planillaVehiculo.vehiculoMarca.nombreMarca}}
+                      </ion-label>
+                  </ion-item>
+              </ion-col>
+              <ion-col>
+                  <ion-item>
+                      <ion-label>
+                          {{p.planillaVehiculo.dominio}}
+                      </ion-label>
+                  </ion-item>
+              </ion-col>
+          </ion-row>
+      </ion-list>
+    </ion-row>
 
 
 </ion-content>
