--- a/src/app/funcionesMenu/planilla-ingreso-egreso/planilla-ingreso-egreso.page.scss
+++ b/src/app/funcionesMenu/planilla-ingreso-egreso/planilla-ingreso-egreso.page.scss
@@ -1,3 +1,9 @@
-ion-label {
-    font-size: 5px;
+ion-col{
+    width: 120px;
+}
+ion-label{
+    text-align: center;
+}
+.border {
+    border-left: solid 1px;
 }
