--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -11,7 +11,7 @@
       <ion-menu-toggle>
         <ion-item>
           <ion-icon slot="start" name="people"></ion-icon>
-          <ion-label>Personas dento del establecimiento</ion-label>
+          <ion-label (click)="personasDentroEstablecimiento()">Personas dento del establecimiento</ion-label>
         </ion-item>
         <ion-item>
           <ion-icon slot="start" name="chatbubbles"></ion-icon>
