--- a/src/app/funcionesMenu/personas-dentro-establecimiento/personas-dentro-establecimiento.page.html
+++ b/src/app/funcionesMenu/personas-dentro-establecimiento/personas-dentro-establecimiento.page.html
@@ -10,57 +10,68 @@
 <ion-content>
 
 <ion-row>
-  <ion-col>
+  <ion-list>
     <ion-row>
-      <ion-item>
-        <ion-label>Apellido</ion-label>
-      </ion-item>
+        <ion-col>
+            <ion-item>
+                <ion-label>
+                    Apellido
+                </ion-label>
+            </ion-item>
+        </ion-col>
+        <ion-col>
+            <ion-item>
+                <ion-label>
+                    Nombre
+                </ion-label>
+            </ion-item>
+        </ion-col>
+        <ion-col>
+            <ion-item>
+                <ion-label>
+                    DNI
+                </ion-label>
+            </ion-item>
+        </ion-col>
+        <ion-col>
+            <ion-item>
+                <ion-label>
+                    Destino
+                </ion-label>
+            </ion-item>
+        </ion-col>
     </ion-row>
-    <ion-row>
-      <ion-item *ngFor="let p of planiallaIngresoEgreso">
-        <ion-label> {{p.planillaPersona.apellidoPersona}} </ion-label>
-      </ion-item>
+    <ion-row *ngFor="let p of planiallaIngresoEgreso">
+        <ion-col>
+            <ion-item>
+                <ion-label>
+                    {{p.planillaPersona.apellidoPersona}}
+                </ion-label>
+            </ion-item>
+        </ion-col>
+        <ion-col>
+            <ion-item>
+                <ion-label>
+                    {{p.planillaPersona.nombrePersona}}
+                </ion-label>
+            </ion-item>
+        </ion-col>
+        <ion-col>
+            <ion-item>
+                <ion-label>
+                    {{p.planillaPersona.dniPersona}}
+                </ion-label>
+            </ion-item>
+        </ion-col>
+        <ion-col>
+            <ion-item>
+                <ion-label>
+                    {{p.planillaDestino.casaDomicilio}}
+                </ion-label>
+            </ion-item>
+        </ion-col>
     </ion-row>
-  </ion-col>
-
-  <ion-col>
-    <ion-row>
-      <ion-item>
-        <ion-label>Nombre</ion-label>
-      </ion-item>
-    </ion-row>
-    <ion-row>
-      <ion-item *ngFor="let p of planiallaIngresoEgreso">
-        <ion-label> {{p.planillaPersona.nombrePersona}} </ion-label>
-      </ion-item>
-    </ion-row>
-  </ion-col>
-
-  <ion-col>
-    <ion-row>
-      <ion-item>
-        <ion-label>DNI</ion-label>
-      </ion-item>
-    </ion-row>
-    <ion-row>
-      <ion-item *ngFor="let p of planiallaIngresoEgreso">
-        <ion-label> {{p.planillaPersona.dniPersona}} </ion-label>
-      </ion-item>
-    </ion-row>
-  </ion-col>
-
-  <ion-col>
-    <ion-row>
-      <ion-item>
-        <ion-label>Dominio</ion-label>
-      </ion-item>
-    </ion-row>
-    <ion-row>
-      <ion-item *ngFor="let p of planiallaIngresoEgreso">
-        <ion-label> {{p.planillaVehiculo.dominio}} </ion-label>
-      </ion-item>
-    </ion-row>
-  </ion-col>
+</ion-list>
 </ion-row>
 
 
