--- a/src/app/security/register/register.page.html
+++ b/src/app/security/register/register.page.html
@@ -7,7 +7,37 @@
 <ion-content>
     <h1>Que buena noticia!</h1>
     <h4>Estamos muy felices de que estes acá!</h4>
-
+    <h5>Por favor ingrese el numero
+        <ion-text color="danger">*</ion-text>
+    </h5>
+    <ion-item>
+        <ion-select class="select-DNI-size" placeholder="DNI" value="dni" okText="Seleccionar">DNI
+            <ion-select-option value="DNI">DNI</ion-select-option>
+        </ion-select>
+        <ion-input type="number" maxlength="9" required placeholder="Ingrese DNI" [(ngModel)]="dni"></ion-input>
+    </ion-item>
+    <ion-item>
+        <ion-label position="floating">Nombre
+            <ion-text color="danger">*</ion-text>
+        </ion-label>
+        <ion-input minlength="3" required [(ngModel)]="nombre" type="string"></ion-input>
+    </ion-item>
+    <ion-item *ngIf="false" lines="none">
+        <ion-text color="danger" class="form-error">
+            El nombre es demasiado corto
+        </ion-text>
+    </ion-item>
+    <ion-item>
+        <ion-label position="floating">Apellido
+            <ion-text color="danger">*</ion-text>
+        </ion-label>
+        <ion-input minlength="3" required [(ngModel)]="apellido" type="string"></ion-input>
+    </ion-item>
+    <ion-item *ngIf="false" lines="none">
+        <ion-text color="danger" class="form-error">
+            El apellido es demasiado corto
+        </ion-text>
+    </ion-item>
     <ion-item>
         <ion-label position="floating">E-Mail
             <ion-text color="danger">*</ion-text>
@@ -36,8 +66,8 @@
         </ion-label>
         <ion-input required [(ngModel)]="password1" type="password"></ion-input>
     </ion-item>
-    <ion-button block color="primary" [disabled]="password!==password1" type="submit">
-        Login
+    <ion-button block color="primary" (click)="onSubmit()" [disabled]="password!==password1" type="submit">
+        Registrarse
     </ion-button>
 
 </ion-content>
