--- a/src/app/security/register2/register2.page.html
+++ b/src/app/security/register2/register2.page.html
@@ -1,9 +1,50 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>register2</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-title id="text">Registrarse</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
+    <h1>¡Excelente!</h1>
+    <h4>Ahora necesitamos algunos datos más para configurar adecuadamente tu perfil</h4>
+    <hr>
+    <h5>Por favor ingrese el numero
+        <ion-text color="danger">*</ion-text>
+    </h5>
+    <ion-item>
+        <ion-select class="select-DNI-size" placeholder="DNI" value="dni" okText="Seleccionar">DNI
+            <ion-select-option value="DNI">DNI</ion-select-option>
+        </ion-select>
+        <ion-input type="number" maxlength="9" required placeholder="Ingrese DNI" [(ngModel)]="dni"></ion-input>
+    </ion-item>
+
+    <ion-item>
+        <ion-label position="floating">Nombre
+            <ion-text color="danger">*</ion-text>
+        </ion-label>
+        <ion-input minlength="3" required [(ngModel)]="nombre" type="string"></ion-input>
+    </ion-item>
+    <ion-item *ngIf="false" lines="none">
+        <ion-text color="danger" class="form-error">
+            El nombre es demasiado corto
+        </ion-text>
+    </ion-item>
+    <ion-item>
+        <ion-label position="floating">Apellido
+            <ion-text color="danger">*</ion-text>
+        </ion-label>
+        <ion-input minlength="3" required [(ngModel)]="apellido" type="string"></ion-input>
+    </ion-item>
+    <ion-item *ngIf="false" lines="none">
+        <ion-text color="danger" class="form-error">
+            El apellido es demasiado corto
+        </ion-text>
+    </ion-item>
+    <p>¿Por que me piden
+        <ion-text color="primary" (click)="presentAlert()">estos datos? </ion-text>
+    </p>
+    <ion-button block color="primary" [disabled]="!(dni && nombre && apellido)" (click)="Guardar()" type="submit" vertical="bottom" horizontal="end">
+        Guardar mis datos
+    </ion-button>
 
 </ion-content>
