new companion changes

--- a/src/app/ingreso/authorization/authorization.page.html
+++ b/src/app/ingreso/authorization/authorization.page.html
@@ -41,7 +41,7 @@
             <ion-select class="select-DNI-size" placeholder="DNI" value="dni" okText="Seleccionar">DNI
                 <ion-select-option value="DNI">DNI</ion-select-option>
             </ion-select>
-            <ion-input style="text-align: center" type="text" placeholder="Ingrese DNI" [(ngModel)]="dni"></ion-input>
+            <ion-input style="text-align: center" type="number" placeholder="Ingrese DNI" [(ngModel)]="dni"></ion-input>
             <ion-icon name="add" color="black" (click)="buscarAcompaniante()"></ion-icon>
         </ion-item>
         <!-- <ion-list>
