--- a/src/app/ingreso/newperson/newperson.page.html
+++ b/src/app/ingreso/newperson/newperson.page.html
@@ -29,7 +29,7 @@
             <ion-label position="floating">Numero de DNI
                 <ion-text color="danger">*</ion-text>
             </ion-label>
-            <ion-input required type="number" [(ngModel)]="dniPersona"></ion-input>
+            <ion-input disabled required type="number" [(ngModel)]="dniPersona"></ion-input>
         </ion-item>
 
         <ion-item>
