--- a/src/app/Administrador/view-norm/view-norm.page.html
+++ b/src/app/Administrador/view-norm/view-norm.page.html
@@ -1,9 +1,18 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>viewNorm</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref='/menu-administrator'></ion-back-button>
+        </ion-buttons>
+        <ion-title class="ion-text-capitalize ion-text-center">IngresAr</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
+    <ion-list>
+      <ion-item>
+          <ion-icon name="list-box"></ion-icon>
+        <ion-label></ion-label>
+      </ion-item>
+    </ion-list>
 
 </ion-content>
