--- a/src/app/Administrador/menu-administrator/menu-administrator.page.html
+++ b/src/app/Administrador/menu-administrator/menu-administrator.page.html
@@ -1,9 +1,35 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>menuAdministrator</ion-title>
+  <ion-toolbar color="primary">
+      <ion-title class="ion-text-capitalize ion-text-center">IngresAr</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
-</ion-content>
+<ion-content padding>
+    <ion-list>
+        <ion-item>
+          <ion-label>Administrar Espacion Comunes</ion-label>
+        </ion-item>                
+        <ion-item>
+          <ion-label>Administrar Guardias</ion-label>
+        </ion-item>                
+        <ion-item>
+          <ion-label>Administrar Propietarios</ion-label>
+        </ion-item>                
+        <ion-item>
+          <ion-label>Novedades</ion-label>
+        </ion-item>                
+        <ion-item>
+          <ion-label>Reportes</ion-label>
+        </ion-item>                
+        <ion-item>
+          <ion-label (click)="irANormas()">Normas</ion-label>
+        </ion-item>           
+    </ion-list>
+  </ion-content>
+  <ion-footer>
+      <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+          <ion-fab-button (click)="mostrar()">
+            <ion-icon name="person"></ion-icon>
+          </ion-fab-button>
+        </ion-fab>
+  </ion-footer>
