--- a/src/app/Administrador/norms/norms.page.html
+++ b/src/app/Administrador/norms/norms.page.html
@@ -1,9 +1,17 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>norms</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref='/menu-administrator'></ion-back-button>
+        </ion-buttons>
+        <ion-title class="ion-text-capitalize ion-text-center">IngresAr</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+    <ion-list>
+      <ion-item *ngFor="let n of normas">
+        <ion-icon name="list-box"></ion-icon>
+        <ion-label class="ml-2">{{n.titulonorma}}</ion-label>
+      </ion-item>
+    </ion-list>
 </ion-content>
