--- a/src/app/Guardia/news/news.page.html
+++ b/src/app/Guardia/news/news.page.html
@@ -1,9 +1,34 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>news</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref='/'></ion-back-button>
+        </ion-buttons>
+        <ion-title>Novedades</ion-title>
+    </ion-toolbar>
 </ion-header>
-
 <ion-content>
-
+    <div class="message-wrap">
+        <div *ngFor="let novedad of novedades" class="message left">
+            <!-- <img class="user-img" [src]="msg.userAvatar" alt="" src=""> -->
+            <div class="msg-detail">
+                <div class="msg-info">
+                    <p>
+                        {{novedad.creada?.nombrePersona}}&nbsp;&nbsp;&nbsp;{{novedad.fecha | date:"MM/dd/yy" }}</p>
+                </div>
+                <div class="msg-content">
+                    <span class="triangle"></span>
+                    <p class="line-breaker ">{{novedad.descripcion}}</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </ion-content>
+<ion-footer no-border>
+    <div class="input-wrap">
+        <textarea #messageInput placeholder="Escribe un mensaje" [(ngModel)]="chatMessage" (keyup.enter)="sendMessage()">
+      </textarea>
+        <button ion-button clear icon-only item-right (click)="sendMessage()">
+        <ion-icon name="ios-send" ios="ios-send" md="md-send"></ion-icon>
+      </button>
+    </div>
+</ion-footer>
