menu actualizado, con todos los botnes funcionando

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -17,11 +17,11 @@
                 </ion-item>
                 <ion-item>
                     <ion-icon slot="start" name="book"></ion-icon>
-                    <ion-label>Generar novedades</ion-label>
+                    <ion-label (click)="novedades()">Generar novedades</ion-label>
                 </ion-item>
                 <ion-item>
                     <ion-icon slot="start" name="paper"></ion-icon>
-                    <ion-label>Parte diario</ion-label>
+                    <ion-label (click)="reportes()">Parte diario</ion-label>
                 </ion-item>
                 <ion-item>
                     <ion-icon slot="start" name="swap"></ion-icon>
